--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,253 @@
+body {
+  font-size: .875rem;
+}
+
+.feather {
+  width: 16px;
+  height: 16px;
+  vertical-align: text-bottom;
+}
+
+/*
+ * Sidebar
+ */
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  /* rtl:raw:
+  right: 0;
+  */
+  bottom: 0;
+  /* rtl:remove */
+  left: 0;
+  z-index: 100; /* Behind the navbar */
+  padding: 48px 0 0; /* Height of navbar */
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+}
+
+@media (max-width: 767.98px) {
+  .sidebar {
+    top: 5rem;
+  }
+}
+
+.sidebar-sticky {
+  position: relative;
+  top: 0;
+  height: calc(100vh - 48px);
+  padding-top: .5rem;
+  overflow-x: hidden;
+  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+}
+
+.sidebar .nav-link {
+  font-weight: 500;
+  color: #333;
+}
+
+.sidebar .nav-link .feather {
+  margin-right: 4px;
+  color: #727272;
+}
+
+.sidebar .nav-link.active {
+  color: #2470dc;
+}
+
+.sidebar .nav-link:hover .feather,
+.sidebar .nav-link.active .feather {
+  color: inherit;
+}
+
+.sidebar-heading {
+  font-size: .75rem;
+  text-transform: uppercase;
+}
+
+/*
+ * Navbar
+ */
+
+
+.navbar-brand {
+  padding-top: .75rem;
+  padding-bottom: .75rem;
+  font-size: 1rem;
+  background-color: rgba(0, 0, 0, .25);
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
+}
+
+.navbar .navbar-toggler {
+  top: .25rem;
+  right: 1rem;
+}
+
+.navbar .form-control {
+  padding: .75rem 1rem;
+  border-width: 0;
+  border-radius: 0;
+}
+
+.form-control-dark {
+  color: #fff;
+  background-color: rgba(255, 255, 255, .1);
+  border-color: rgba(255, 255, 255, .1);
+}
+
+.form-control-dark:focus {
+  border-color: transparent;
+  box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
+}
+
+.b-example-divider {
+  height: 3rem;
+  background-color: rgba(0, 0, 0, .1);
+  border: solid rgba(0, 0, 0, .15);
+  border-width: 1px 0;
+  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+}
+
+.form-control-dark {
+  color: #fff;
+  background-color: var(--bs-dark);
+  border-color: var(--bs-gray);
+}
+.form-control-dark:focus {
+  color: #fff;
+  background-color: var(--bs-dark);
+  border-color: #fff;
+  box-shadow: 0 0 0 .25rem rgba(255, 255, 255, .25);
+}
+
+.bi {
+  vertical-align: -.125em;
+  fill: currentColor;
+}
+
+.text-small {
+  font-size: 85%;
+}
+
+.dropdown-toggle {
+  outline: 0;
+}
+
+.card-img-top:hover {
+    opacity: 0.5;
+}
+
+canvas {
+    border: solid;
+    border-color: black;
+    text-align: center;
+    margin-top: 12px;
+    margin-left: 8px;
+}
+
+/* Solution 1 CSS */
+/* 
 .App {
+  font-family: sans-serif;
   text-align: center;
+  margin: 0px;
+  padding: 0px;
+} */
+
+/* body {
+  margin: 0;
+  padding: 0;
+} */
+
+table tr td {
+  margin: 0px;
+  padding: 0px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* header {
+  background-color: antiquewhite;
+  margin: -9px -8px 0px -8px;
+  padding: 1rem;
+  font-size: 2rem;
+  text-align: left;
+} */
+
+.left-column {
+  margin: 0px;
+  width: 10%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.left-column button {
+  padding: 20px;
+  max-width: 40px;
+  max-height: 40px;
+  border-radius: 50%;
+  background-color: aqua;
+  /* position: fixed; */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.right-column {
+  margin: 0px;
+  width: 10%;
+}
+
+.right-column button {
+  padding: 20px;
+  max-width: 40px;
+  max-height: 40px;
+  border-radius: 50%;
+  background-color: aqua;
+  /* position: fixed; */
+}
+
+.centre-column {
+  padding: 0px;
+  box-sizing: content-box;
+  width: 700px;
+  height: 350px;
+  max-width: 700px;
+  max-height: 350px;
+  border: solid black 2px;
+}
+
+.drag-area {
+  box-sizing: content-box;
+  width: 20%;
+  font-size: 0.5rem;
+  max-width: 700px;
+  max-height: 350px;
+  /* border: solid #5b6dcd 2px; */
+}
+
+.drag-area h1 {
+  /* white-space: nowrap; */
+  width: auto;
+}
+
+/* Solution2 CSS */
+.main_container {
+  margin: 10% auto;
+  width: 50%;
+  height: 50%;
+  padding: 20px;
+  background-color: rgb(200, 180, 180);
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-evenly;
+  gap: 100px;
+  border-radius: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.text_container {
+  /* background-color: yellow; */
+  width: 50%;
+  /* border: 2px solid black; */
+  text-align: center;
+  height: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.change_color_container {
+  /* background-color: blue; */
+  width: 50%;
+  height: 100%;
 }
